--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
   "name": "Uống Nước",
   "short_name": "DrinkWater",
-  "start_url": "/",
+  "start_url": "/waterReminder/index.html",
+  "scope": "/waterReminder/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4a90e2",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "/waterReminder/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "/waterReminder/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
